Updated and tested for Fabric and NeoForge in 1.21/1.21.1